# ruskel

./: .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix
crates/libripdoc/src/cargoutils/: mod.rs  resolved_target.rs
crates/libruskel/: Cargo.toml
crates/libruskel/src/: cargoutils.rs  crateutils.rs  error.rs  frontmatter.rs  highlight.rs  keywords.rs  lib.rs  render.rs  ruskel.rs  search.rs  signature.rs  target.rs  testutils.rs
crates/libruskel/src/cargoutils/: config.rs  manifest.rs  mod.rs  path.rs  resolved_target.rs  rustdoc_error.rs
crates/libruskel/src/crateutils/: function.rs  item.rs  mod.rs  path.rs
crates/libruskel/src/render/: core.rs  impls.rs  items.rs  macros.rs  mod.rs  state.rs  utils.rs
crates/libruskel/tests/: enums.rs  filter.rs  functions.rs  impls.rs  listing.rs  macros.rs  modules.rs  structs.rs  targets.rs  traits.rs  utils.rs
crates/libruskel/tests/fixtures/widget_crate/: Cargo.toml  README.md
crates/libruskel/tests/fixtures/widget_crate/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: server.rs
crates/mcp/tests/: integration_test.rs
crates/ripdoc-cargo/: Cargo.toml
crates/ripdoc-cargo/src/: error.rs  lib.rs  path.rs  registry.rs  resolved_target.rs  rustdoc_error.rs  target.rs
crates/ripdoc-cli/: Cargo.toml
crates/ripdoc-cli/src/: main.rs
crates/ripdoc-core/: Cargo.toml
crates/ripdoc-core/src/: error.rs  lib.rs  search.rs  tests.rs
crates/ripdoc-core/tests/: enums.rs  filter.rs  functions.rs  impls.rs  listing.rs  misc.rs  private_flag.rs  structs.rs  targets.rs  traits.rs  utils.rs
crates/ripdoc-render/: Cargo.toml
crates/ripdoc-render/src/: core.rs  error.rs  impls.rs  items.rs  lib.rs  macros.rs  markdown.rs  signatures.rs  state.rs  utils.rs
crates/ripdoc-render/src/syntax/: bounds.rs  function.rs  generics.rs  item.rs  keywords.rs  mod.rs  types.rs
crates/ruskel/: Cargo.toml
crates/ruskel/src/: main.rs
xtask/: Cargo.toml
