[workspace.package]
version = "0.0.11"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>", "Albert O'Shea <albertoshea2@gmail.com>"]
description = "Generates skeletonized outlines of Rust crates"
license = "MIT"
repository = "https://github.com/cortesi/ruskel"
readme = "README.md"
keywords = ["docs", "documentation", "outline", "cli"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
libruskel = { version = "0.0.11", path = "crates/libruskel" }
ruskel-mcp = { version = "0.0.11", path = "crates/mcp" }
