[workspace.package]
version = "0.0.11"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>", "Albert O'Shea <albertoshea2@gmail.com>"]
description = "Generates skeletonized outlines of Rust crates"
license = "MIT"
repository = "https://github.com/cortesi/ruskel"
readme = "README.md"
keywords = ["docs", "documentation", "outline", "cli"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["vendor/cargo-public-api", "vendor/cargo-manifest"]

[workspace.dependencies]
libruskel = { version = "0.0.11", path = "crates/libruskel" }

[patch.crates-io]
rustdoc-json = { path = "vendor/cargo-public-api/rustdoc-json" }
cargo-manifest = { path = "vendor/cargo-manifest" }