[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
description = "Query and outline Rust documentation from the command line"
license = "MIT"
repository = "https://github.com/Alb-O/ripdoc"
readme = "README.md"
keywords = ["docs", "documentation", "outline", "cli"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
ripdoc-cli = { path = "crates/ripdoc-cli" }
ripdoc-core = { path = "crates/ripdoc-core" }
ripdoc-cargo = { path = "crates/ripdoc-cargo" }
ripdoc-render = { path = "crates/ripdoc-render" }

[patch.crates-io]
rustdoc-json = { path = "vendor/cargo-public-api/rustdoc-json" }
cargo-manifest = { path = "vendor/cargo-manifest" }
