[package]
name = "libruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
bitflags = "2.10.0"
cargo = "0.92.0"
cargo_toml = "0.22.3"
once_cell = { version = "1.21", default-features = false }
regex = "1.12.2"
rust-format = "0.3.4"
rustdoc-json = "0.9.7"
rustdoc-types = "0.56.0"
semver = { version = "1.0.27", default-features = false }
serde_json = "1.0.145"
tempfile = { version = "3.23.0", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.1"
