[package]
name = "libruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = "2.10"
cargo_metadata = "0.23"
cargo_toml = "0.22"
once_cell = { version = "1.21", default-features = false }
regex = "1.12"
rust-format = "0.3"
rustdoc-json = "0.9"
rustdoc-types = "0.56"
ureq = { version = "3.1" }
semver = { version = "1.0", default-features = false }
serde_json = "1.0"
tempfile = { version = "3.23", default-features = false }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4"
