[package]
name = "ruskel-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Ruskel - generates skeletonized outlines of Rust crates"
readme.workspace = true

[lints]
workspace = true

[dependencies]
libruskel = { workspace = true }
tenx-mcp = { git = "https://github.com/tenxhq/tenx-mcp.git", rev = "94da224" }
tokio = "1"
async-trait = "0.1"
serde = { version = "1", default-features = false }
serde_json = "1"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

[dev-dependencies]
tokio = "1"
tokio-util = "0.7"
