[package]
name = "ripdoc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
libripdoc = { workspace=true }
clap = { version = "4.5.51", features = ["derive"] }
tokio = "1"

