[package]
name = "ripdoc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
ripdoc-core = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.2"
subsecond = { version = "0.7", optional = true }
anyhow = { version = "1.0", optional = true }
notify = { version = "8.2", optional = true }
tempfile = { version = "3.12", optional = true }
libloading = { version = "0.9", optional = true }

[features]
hot-interpreter = [
	"dep:anyhow",
	"dep:libloading",
	"dep:notify",
	"dep:subsecond",
	"dep:tempfile",
]

[[bin]]
name = "hotinterp"
path = "src/bin/hotinterp.rs"
required-features = ["hot-interpreter"]
