[package]
name = "ruskel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
libruskel = { workspace=true }
ruskel-mcp = { workspace=true }
clap = { version = "4.5.51", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

